tests/neg/objects/10-object.ts

export function foo(o: { x: number; }): { x: number | boolean } {
    return o;
}
